# lumen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
sandbox/: CMakeLists.txt  main.cpp
scenes/: box.json  cornell.json  test2.json
src/: CMakeLists.txt  Config.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Scene.h  main.cpp
src/core/: Camera.cpp  Camera.h  Core.h  Image.cpp  Image.h  Interval.cpp  Interval.h  Math.h  Ray.cpp  Ray.h
src/geometry/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  BoundingVolume.h  Box.h  Instance.cpp  Instance.h  Intersectable.cpp  Intersectable.h  IntersectableCollection.cpp  IntersectableCollection.h  Quad.h  Sphere.h  Transform.h
src/lumen/core/: Core.h  Log.cpp  Log.h
src/lumen/math/: Float.h
src/lumen/radiometry/: Spectrum.hpp
src/material/: Dielectric.cpp  Dielectric.h  DiffuseLight.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h
src/scene/: Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h
src/texture/: SolidColor.cpp  SolidColor.h  Texture.h
test/: CMakeLists.txt
test/radiometry/: SpectrumTests.cpp
