set(SANDBOX_TARGET lumen-sandbox)
set(SANDBOX_LIBS lumen)

file(GLOB_RECURSE SANDBOX_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_executable(${SANDBOX_TARGET} ${SANDBOX_SRC})
set_property(TARGET ${SANDBOX_TARGET} PROPERTY CXX_STANDARD ${LUMEN_CXX_STANDARD})
target_link_libraries(${SANDBOX_TARGET} PUBLIC ${SANDBOX_LIBS})
