set(LUMEN_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR})
set(LUMEN_LIBS kc)
set(LUMEN_CXX_STANDARD 20)

file(GLOB_RECURSE LUMEN_SRC ${CMAKE_CURRENT_SOURCE_DIR}/lumen/*.cpp)

add_library(${PROJECT_NAME} STATIC ${LUMEN_SRC})
target_include_directories(${PROJECT_NAME} PUBLIC ${LUMEN_INCLUDE})
target_include_directories(${PROJECT_NAME} PRIVATE ${LUMEN_INCLUDE}/lumen)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD ${LUMEN_CXX_STANDARD})
target_link_libraries(${PROJECT_NAME} PUBLIC ${LUMEN_LIBS})
